# B-market-competitor-team-eval

./: .env.example  .gitignore  Investment_Decision.py  README.md  Report_Generation.py  Report_Review.py  competitor_analysis_agent.py  document_1_fixed_sources.md  main.py  market_eval_agent.py  orchestrator.py  pdf_report.py  pyproject.toml  state.py  team_eval_agent.py  tech_analysis_knowledge_base_with_sources.md
agents/: __init__.py  agentic_rag.py  competitor_analysis_agent.py  investment_decision_agent.py  market_eval_agent.py  report_generation_agent.py  report_review_agent.py  risk_assessment_agent.py  startup_exploration_agent.py  team_eval_agent.py  tech_analysis_agent.py
output/: evaluation_20260324_165309.json  evaluation_20260324_170356.json
scripts/: ingest_markdown_to_chroma.py
